Fixed extra space on right for mobile home page.

--- a/styles/calendar.less
+++ b/styles/calendar.less
@@ -75,9 +75,6 @@ img {
 
 
 /* Currently the paw print. */
-#navbar-logo {
-	width: 25%;
-}
 
 body {
   background-color: rgb(250, 235, 215);
